--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD='your-password-from-script'
 POSTGRES_DATABASE=movies_mgmt_db
+POSTGRES_DATABASE_TEST=movies_mgmt_test_db
 PORT=3000
